# conan-test-private-components

./: .gitignore  CMakeLists.txt  README  conanfile.py  test_fails_include.sh  test_fails_link.sh
include/compa/: compa_function.h
include/compb/: compb_function.h  compb_function_failure.h
include/private_component/: private_function.h
include/public_component/: public_function.h
src/: compa_function.cpp  compb_function.cpp  private_function.cpp  public_function.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
